tests/ui/feature-gates/feature-gate-cilk.stderr
error[E0658]: cilk keywords are experimental
  --> $DIR/feature-gate-cilk.rs:2:5
   |
LL |     cilk_spawn { 5 };
   |     ^^^^^^^^^^
   |
   = note: see issue #999999 <https://github.com/rust-lang/rust/issues/999999> for more information
   = help: add `#![feature(cilk)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: cilk keywords are experimental
  --> $DIR/feature-gate-cilk.rs:3:5
   |
LL |     cilk_sync;
   |     ^^^^^^^^^
   |
   = note: see issue #999999 <https://github.com/rust-lang/rust/issues/999999> for more information
   = help: add `#![feature(cilk)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: cilk keywords are experimental
  --> $DIR/feature-gate-cilk.rs:4:5
   |
LL |     cilk_scope { 5 };
   |     ^^^^^^^^^^
   |
   = note: see issue #999999 <https://github.com/rust-lang/rust/issues/999999> for more information
   = help: add `#![feature(cilk)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: cilk keywords are experimental
  --> $DIR/feature-gate-cilk.rs:5:5
   |
LL |     cilk_for i in 0..10 {}
   |     ^^^^^^^^
   |
   = note: see issue #999999 <https://github.com/rust-lang/rust/issues/999999> for more information
   = help: add `#![feature(cilk)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0308]: mismatched types
  --> $DIR/feature-gate-cilk.rs:5:5
   |
LL | fn main() {
   |          - expected `()` because of default return type
...
LL |     cilk_for i in 0..10 {}
   |     ^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `Range<{integer}>`
   |
   = note: expected unit type `()`
                 found struct `std::ops::Range<{integer}>`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0308, E0658.
For more information about an error, try `rustc --explain E0308`.
